docs: add option to align with java 8